
          06-10-13  Bfo     Version changed to V3.34
          06-10-13  MG      debug       : "debug_procdump" (bus error reporting) added
          06-10-13  MG      os9exec_nt  : "debug_procdump" (bus error reporting) called
          
          06-10-14  Bfo     os9exec_nt  : slightly rearranged for debugging purposes
          06-10-14  Bfo     procstuff   : icpt_signal assignment problem fixed for internal 
                                          utilities, still a problem for "clock2"
          06-10-20  Bfo     fcalls/
                            procstuff   : idle load of OS9exec nearly reduced to 0 %
    3.34  06-??-??  Bfo
    -------------------  
*/



/* unresolved bugs: */
/*
    !!  "_" name convention on Windows (hawk_C0).
    
    -   MPW uses its I/O currently partly also for the tty/pty system.
    -   "mgencas" will not startup over network (Linux), "mme" has also problems.
    -   Linux telnet close still quits emulator (recognition of end cond not correctly)
    -   "inetd" superdaemon is not yet running correctly.
    -   A$AtDate restricted to 248 days / will not adjust when system time changes
    -   Deadlocking MGR when too small DEFAULTPTYSZ 

   (+)  Take tty00/pty00 first (problems with arbitration)
   (+)  setime_Y2K version with param passing --> 1900
   (+)  icpt_signal problem with "clock2" utility
*/


/* To do: */
/*
    -   RBF: do read only, if write larger than a sector
    -   SCSI subsystem for Linux
    -   direct line editing on Linux (over network)
    -   gs_ready Linux for CR
    -   Faster directory read (Windows)
    -   Implement internal command "ls" in UNIX style: "ls -la".
    -   <in_recursion> for debug load
    -   btree optimisation
    -   termcap support for the DOS window.
    -   "OS9Boot" will be loaded by name, not by reference on RBF images
    -   paging for SCF devices
    -   tab expansion for SCF devices

   (+)  return  of d1.l from pipe-systasks
   (+)  passing of d2.l to   pipe-open
*/